Use GPL-3 license

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,7 @@ Authors@R:
            comment = c(ORCID = "0000-0001-7503-852X"))
 Description: Unsorted collection of various statististical functions. Perhaps
     some of them are useful also to others.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
