Update package title

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mbstats
-Title: Bag of Michal's Eccentric Statistical Developments
+Title: Michal's Beautiful Selection of Totally Awesome and Trustworthy Statistical functions
 Version: 0.9-0
 Authors@R: 
     person(given = "Michal",
